Tango/DLL Files/TANGO DLL for Visual Studio VC++6.0 (32 Bit)/Tango_DLL.h


TANGO_API LS_SetTrigCount (int lValue);

TANGO_API LS_SetVelTVRO (double dX, double dY, double dZ, double dR);

TANGO_API LS_GetVelTVRO (double *pdX, double *pdY, double *pdZ, double *pdR);

TANGO_API LS_SetAccelTVRO (double dX, double dY, double dZ, double dR);

TANGO_API LS_GetAccelTVRO (double *pdX, double *pdY, double *pdZ, double *pdR);

TANGO_API LS_SetVelSingleAxisTVRO (int lAxis, double dVel);

TANGO_API LS_SetAccelSingleAxisTVRO (int lAxis, double dAccel);

TANGO_API LS_SetPosTVRO (double dX, double dY, double dZ, double dR);

TANGO_API LS_GetPosTVRO (double *pdX, double *pdY, double *pdZ, double *pdR);

TANGO_API LS_MoveAbsTVRO (double dX, double dY, double dZ, double dR, BOOL bWait);

TANGO_API LS_MoveRelTVRO (double dX, double dY, double dZ, double dR, BOOL bWait);

TANGO_API LS_MoveRelTVROSingleAxis (int lAxis, double dValue, BOOL bWait);

TANGO_API LS_MoveAbsTVROSingleAxis (int lAxis, double dValue, BOOL bWait);

TANGO_API LS_GetStatusTVRO (char *pcStat, int lMaxLen);

TANGO_API LS_GetTargetWindow (double *pdX, double *pdY, double *pdZ, double *pdR);

TANGO_API LS_GetEncoderPeriod (double *pdX, double *pdY, double *pdZ, double *pdR);

TANGO_API LS_GetEncoderRefSignal (int *plXR, int *plYR, int *plZR, int *plRR);

TANGO_API LS_GetEncoderPosition (BOOL *pbValue);

TANGO_API LS_GetEncoderActive (int *plFlags);

TANGO_API LS_GetController (int *plXC, int *plYC, int *plZC, int *plRC);

TANGO_API LS_GetControllerCall (int *plCtrCall);

TANGO_API LS_GetControllerSteps (double *pdX, double *pdY, double *pdZ, double *pdR);

TANGO_API LS_GetControllerFactor (double *pdX, double *pdY, double *pdZ, double *pdR);

TANGO_API LS_GetControllerTWDelay(int *plCtrTWDelay);

TANGO_API LS_GetControllerTimeout (int *plACtrTimeout);

TANGO_API LS_SetCtrFastMoveOn (void);

TANGO_API LS_SetCtrFastMoveOff (void);

TANGO_API LS_GetCtrFastMove (BOOL *pbActive);

TANGO_API LS_ClearCtrFastMoveCounter (void);

TANGO_API LS_GetCtrFastMoveCounter (int *plXC, int *plYC, int *plZC, int *plRC);

TANGO_API LS_ClearEncoder (int lAxis);

TANGO_API LS_GetEncoder (double *pdXP, double *pdYP, double *pdZP, double *pdRP);

TANGO_API LS_GetTrigger (BOOL *pbATrigger);

TANGO_API LS_GetTriggerPar (int *plAxis, int *plMode, int *plSignal, double *pdDistance);

TANGO_API LS_GetTrigCount (int *plValue);


TANGO_API LS_SetTVRInPulse (int lAxis, BOOL bDirection);

TANGO_API LS_GetSnapshot (BOOL *pbASnapshot);

TANGO_API LS_SetSnapshotFilter (int lTime);

TANGO_API LS_GetSnapshotFilter (int *plTime);

TANGO_API LS_GetSnapshotPar (BOOL *pbHigh, BOOL *pbAutoMode);

TANGO_API LS_GetLimit (int lAxis, double *pdMinRange, double *pdMaxRange);

TANGO_API LS_JoyChangeAxis (BOOL bValue);

TANGO_API LS_GetJoyChangeAxis (BOOL *pbValue);