Tango/DLL Examples/Visual_Basic/SourceCode/Tango.vb

    Declare Function LS_SetVelTVRO Lib "Tango_dll.dll" (ByVal dX As Double, ByVal dY As Double, ByVal dZ As Double, ByVal dR As Double) As Integer
    Declare Function LS_GetVelTVRO Lib "Tango_dll.dll" (ByRef pdX As Double, ByRef pdY As Double, ByRef pdZ As Double, ByRef pdR As Double) As Integer
    Declare Function LS_SetAccelTVRO Lib "Tango_dll.dll" (ByVal dX As Double, ByVal dY As Double, ByVal dZ As Double, ByVal dR As Double) As Integer
    Declare Function LS_GetAccelTVRO Lib "Tango_dll.dll" (ByRef pdX As Double, ByRef pdY As Double, ByRef pdZ As Double, ByRef pdR As Double) As Integer
    Declare Function LS_SetVelSingleAxisTVRO Lib "Tango_dll.dll" (ByVal lAxis As Integer, ByVal dVel As Double) As Integer
    Declare Function LS_SetAccelSingleAxisTVRO Lib "Tango_dll.dll" (ByVal lAxis As Integer, ByVal dAccel As Double) As Integer
    Declare Function LS_SetPosTVRO Lib "Tango_dll.dll" (ByVal dX As Double, ByVal dY As Double, ByVal dZ As Double, ByVal dR As Double) As Integer
    Declare Function LS_GetPosTVRO Lib "Tango_dll.dll" (ByRef pdX As Double, ByRef pdY As Double, ByRef pdZ As Double, ByRef pdR As Double) As Integer
    Declare Function LS_MoveAbsTVRO Lib "Tango_dll.dll" (ByVal dX As Double, ByVal dY As Double, ByVal dZ As Double, ByVal dR As Double, ByVal bWait As Integer) As Integer
    Declare Function LS_MoveRelTVRO Lib "Tango_dll.dll" (ByVal dX As Double, ByVal dY As Double, ByVal dZ As Double, ByVal dR As Double, ByVal bWait As Integer) As Integer
    Declare Function LS_MoveRelTVROSingleAxis Lib "Tango_dll.dll" (ByVal lAxis As Integer, ByVal dValue As Double, ByVal bWait As Integer) As Integer
    Declare Function LS_MoveAbsTVROSingleAxis Lib "Tango_dll.dll" (ByVal lAxis As Integer, ByVal dValue As Double, ByVal bWait As Integer) As Integer
    Declare Function LS_GetStatusTVRO Lib "Tango_dll.dll" (ByVal pcStat As String, ByVal lMaxLen As Integer) As Integer
    Declare Function LS_GetTargetWindow Lib "Tango_dll.dll" (ByRef pdX As Double, ByRef pdY As Double, ByRef pdZ As Double, ByRef pdR As Double) As Integer
    Declare Function LS_GetEncoderPeriod Lib "Tango_dll.dll" (ByRef pdX As Double, ByRef pdY As Double, ByRef pdZ As Double, ByRef pdR As Double) As Integer
    Declare Function LS_GetEncoderRefSignal Lib "Tango_dll.dll" (ByRef plXR As Integer, ByRef plYR As Integer, ByRef plZR As Integer, ByRef plRR As Integer) As Integer
    Declare Function LS_GetEncoderPosition Lib "Tango_dll.dll" (ByRef pbValue As Integer) As Integer
    Declare Function LS_GetEncoderActive Lib "Tango_dll.dll" (ByRef plFlags As Integer) As Integer
    Declare Function LS_GetController Lib "Tango_dll.dll" (ByRef plXC As Integer, ByRef plYC As Integer, ByRef plZC As Integer, ByRef plRC As Integer) As Integer
    Declare Function LS_GetControllerCall Lib "Tango_dll.dll" (ByRef plCtrCall As Integer) As Integer
    Declare Function LS_GetControllerSteps Lib "Tango_dll.dll" (ByRef pdX As Double, ByRef pdY As Double, ByRef pdZ As Double, ByRef pdR As Double) As Integer
    Declare Function LS_GetControllerFactor Lib "Tango_dll.dll" (ByRef pdX As Double, ByRef pdY As Double, ByRef pdZ As Double, ByRef pdR As Double) As Integer
    Declare Function LS_GetControllerTWDelay Lib "Tango_dll.dll" (ByRef plCtrTWDelay As Integer) As Integer
    Declare Function LS_GetControllerTimeout Lib "Tango_dll.dll" (ByRef plACtrTimeout As Integer) As Integer
    Declare Function LS_SetCtrFastMoveOn Lib "Tango_dll.dll" () As Integer
    Declare Function LS_SetCtrFastMoveOff Lib "Tango_dll.dll" () As Integer
    Declare Function LS_GetCtrFastMove Lib "Tango_dll.dll" (ByRef pbActive As Integer) As Integer
    Declare Function LS_ClearCtrFastMoveCounter Lib "Tango_dll.dll" () As Integer
    Declare Function LS_GetCtrFastMoveCounter Lib "Tango_dll.dll" (ByRef plXC As Integer, ByRef plYC As Integer, ByRef plZC As Integer, ByRef plRC As Integer) As Integer
    Declare Function LS_ClearEncoder Lib "Tango_dll.dll" (ByVal lAxis As Integer) As Integer
    Declare Function LS_GetEncoder Lib "Tango_dll.dll" (ByRef pdXP As Double, ByRef pdYP As Double, ByRef pdZP As Double, ByRef pdRP As Double) As Integer
    Declare Function LS_GetTrigger Lib "Tango_dll.dll" (ByRef pbATrigger As Integer) As Integer
    Declare Function LS_GetTriggerPar Lib "Tango_dll.dll" (ByRef plAxis As Integer, ByRef plMode As Integer, ByRef plSignal As Integer, ByRef pdDistance As Double) As Integer
    Declare Function LS_SetTrigCount Lib "Tango_dll.dll" (ByVal lValue As Integer) As Integer
    Declare Function LS_GetTrigCount Lib "Tango_dll.dll" (ByRef plValue As Integer) As Integer
    Declare Function LS_SetTVRInPulse Lib "Tango_dll.dll" (ByVal lAxis As Integer, ByVal bDirection As Integer) As Integer
    Declare Function LS_GetSnapshot Lib "Tango_dll.dll" (ByRef pbASnapshot As Integer) As Integer
    Declare Function LS_SetSnapshotFilter Lib "Tango_dll.dll" (ByVal lTime As Integer) As Integer
    Declare Function LS_GetSnapshotFilter Lib "Tango_dll.dll" (ByRef plTime As Integer) As Integer
    Declare Function LS_GetSnapshotPar Lib "Tango_dll.dll" (ByRef pbHigh As Integer, ByRef pbAutoMode As Integer) As Integer
    Declare Function LS_GetLimit Lib "Tango_dll.dll" (ByVal lAxis As Integer, ByRef pdMinRange As Double, ByRef pdMaxRange As Double) As Integer
    Declare Function LS_JoyChangeAxis Lib "Tango_dll.dll" (ByVal bValue As Integer) As Integer
    Declare Function LS_GetJoyChangeAxis Lib "Tango_dll.dll" (ByRef pbValue As Integer) As Integer
End Module